refactor: adicionando conteudo no html, parte 3

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="section">
+        <div id="container">
+            <p class="title">
+                Meu Título
+            </p>
+
+            <p class="subtitle">
+                Meu Subtítulo
+            </p>
+        </div>
+    </section>
 </body>
 </html>
