--- a/index.html
+++ b/index.html
@@ -16,23 +16,83 @@
 <body>
     <section class="section">
         <div id="container">
-            <!--Adicionando Titulo do Bulma-->
-            <p class="title">
-                Meu Título
-            </p>
-            <!--Adicionando Subtitulo do Bulma-->
-            <p class="subtitle">
-                Meu Subtítulo
-            </p>
-            <!--Adicionando Breadcrump-->
-            <nav class="breadcrumb is-centered" aria-label="breadcrumbs">
-                <ul>
-                  <li><a href="#">Bulma</a></li>
-                  <li><a href="#">Documentation</a></li>
-                  <li><a href="#">Components</a></li>
-                  <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
-                </ul>
-            </nav>
+            <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+                <div class="navbar-brand">
+                  <a class="navbar-item" href="https://bulma.io">
+                    <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: Free, open source, and modern CSS framework based on Flexbox" width="112" height="28">
+                  </a>
+              
+                  <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                  </a>
+                </div>
+              </nav>
+        <!--
+                //Adicionando Titulo do Bulma
+                <p class="title">
+                    Meu Título
+                </p>
+                //Adicionando Subtitulo do Bulma-
+                <p class="subtitle">
+                    Meu Subtítulo
+                </p>
+                //Adicionando Breadcrump
+                <nav class="breadcrumb is-centered" aria-label="breadcrumbs">
+                    <ul>
+                        <li><a href="#">Bulma</a></li>
+                        <li><a href="#">Documentation</a></li>
+                        <li><a href="#">Components</a></li>
+                        <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
+                    </ul>
+                </nav>
+                //Adicionando painel
+                <article class="panel is-link">
+                    <p class="panel-heading">
+                        Link
+                    </p>
+                    <p class="panel-tabs">
+                        <a class="is-active">All</a>
+                        <a>Public</a>
+                        <a>Private</a>
+                        <a>Sources</a>
+                        <a>Forks</a>
+                    </p>
+                    <div class="panel-block">
+                        <p class="control has-icons-left">
+                            <input class="input is-link" type="text" placeholder="Search">
+                            <span class="icon is-left">
+                                <i class="fas fa-search" aria-hidden="true"></i>
+                            </span>
+                        </p>
+                    </div>
+                    <a class="panel-block is-active">
+                        <span class="panel-icon">
+                            <i class="fas fa-book" aria-hidden="true"></i>
+                        </span>
+                        bulma
+                    </a>
+                    <a class="panel-block">
+                        <span class="panel-icon">
+                            <i class="fas fa-book" aria-hidden="true"></i>
+                        </span>
+                        marksheet
+                    </a>
+                    <a class="panel-block">
+                        <span class="panel-icon">
+                            <i class="fas fa-book" aria-hidden="true"></i>
+                        </span>
+                        minireset.css
+                    </a>
+                    <a class="panel-block">
+                        <span class="panel-icon">
+                            <i class="fas fa-book" aria-hidden="true"></i>
+                        </span>
+                        jgthms.github.io
+                    </a>
+                </article>
+        -->
         </div>
     </section>
 </body>
