refactor: adicionando conteudo no html, parte 13

--- a/index.html
+++ b/index.html
@@ -89,7 +89,31 @@
                     </header>
                     <div class="card-content">
                         <div class="content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quas, incidunt id quisquam laborum nulla consequuntur suscipit. Provident atque incidunt aspernatur facere, qui quo in, dolorum perspiciatis iste nostrum quas!
+                            <div class="columns">
+                                <div class="column">
+                                    <figure class="image is-128x128">
+                                        <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                                      </figure>
+                                </div>
+                                <div class="column is-9">
+                                  <p class="title is-5">JavaScrpit <span class="tag is-dark">empresa</span></p>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum velit obcaecati aliquid similique, praesentium inventore. Corporis tenetur nihil nobis rem architecto dolorum eum, aliquam optio natus porro, nisi tempora quaerat.</p>
+                                </div> 
+                              </div>
+                        </div>
+
+                        <div class="content">
+                            <div class="columns">
+                                <div class="column">
+                                    <figure class="image is-128x128">
+                                        <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                                      </figure>
+                                </div>
+                                <div class="column is-9">
+                                  <p class="title is-5">JavaScrpit <span class="tag is-dark">empresa</span></p>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum velit obcaecati aliquid similique, praesentium inventore. Corporis tenetur nihil nobis rem architecto dolorum eum, aliquam optio natus porro, nisi tempora quaerat.</p>
+                                </div> 
+                              </div>
                         </div>
                     </div>
                 </div>
