refactor: adicionando conteudo no html, parte 14

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                     </header>
                     <div class="card-content">
                         <div class="content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quas, incidunt id quisquam laborum nulla consequuntur suscipit. Provident atque incidunt aspernatur facere, qui quo in, dolorum perspiciatis iste nostrum quas!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quas, incidunt id quisquam
+                            laborum nulla consequuntur suscipit. Provident atque incidunt aspernatur facere, qui quo in,
+                            dolorum perspiciatis iste nostrum quas!
                         </div>
                     </div>
                 </div>
@@ -93,13 +95,15 @@
                                 <div class="column">
                                     <figure class="image is-128x128">
                                         <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
-                                      </figure>
+                                    </figure>
                                 </div>
                                 <div class="column is-9">
-                                  <p class="title is-5">JavaScrpit <span class="tag is-dark">empresa</span></p>
-                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum velit obcaecati aliquid similique, praesentium inventore. Corporis tenetur nihil nobis rem architecto dolorum eum, aliquam optio natus porro, nisi tempora quaerat.</p>
-                                </div> 
-                              </div>
+                                    <p class="title is-5">JavaScrpit <span class="tag is-dark">empresa</span></p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum velit obcaecati
+                                        aliquid similique, praesentium inventore. Corporis tenetur nihil nobis rem
+                                        architecto dolorum eum, aliquam optio natus porro, nisi tempora quaerat.</p>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="content">
@@ -107,13 +111,31 @@
                                 <div class="column">
                                     <figure class="image is-128x128">
                                         <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
-                                      </figure>
+                                    </figure>
                                 </div>
                                 <div class="column is-9">
-                                  <p class="title is-5">JavaScrpit <span class="tag is-dark">empresa</span></p>
-                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum velit obcaecati aliquid similique, praesentium inventore. Corporis tenetur nihil nobis rem architecto dolorum eum, aliquam optio natus porro, nisi tempora quaerat.</p>
-                                </div> 
-                              </div>
+                                    <p class="title is-5">JavaScrpit <span class="tag is-dark">empresa</span></p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum velit obcaecati
+                                        aliquid similique, praesentium inventore. Corporis tenetur nihil nobis rem
+                                        architecto dolorum eum, aliquam optio natus porro, nisi tempora quaerat.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <header class="card-header">
+                        <p class="card-header-title">
+                            Formação
+                        </p>
+                    </header>
+                    <div class="card-content">
+                        <div class="content">
+                            <p class="title is-5">Colégio Doideira Total</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quas, incidunt id quisquam
+                            laborum nulla consequuntur suscipit. Provident atque incidunt aspernatur facere, qui quo in,
+                            dolorum perspiciatis iste nostrum quas!</p>
                         </div>
                     </div>
                 </div>
